tests/NormalTests/paczka1/fuzzy1/14383376.err
Error in line 3: DKVQT A36 51,2
Error in line 12: fUmack A765 74,8
